# mini-mqtt-client

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
docs/: development-plan.md
docs/阶段开发文档/: 1. 基础架构搭建.md  10. 优化与完善.md  11. 国际化多语言.md  12. 环境变量功能.md  2. Server管理功能.md  3. MQTT连接功能.md  4. 发布订阅功能.md  5. 消息展示功能.md  6. 命令模板功能.md  7. 定时发布功能.md  8. 系统设置.md  9. 预处理脚本.md
docs/阶段进度文档/: 1. 基础架构搭建.md  2. Server管理功能.md  3. MQTT连接功能.md  4. 发布订阅功能.md  5. 消息展示功能.md  6. 命令模板功能.md  7. 定时发布功能.md  8. 系统设置功能.md  9. 预处理脚本功能.md  README.md
src/: App.vue  components.d.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: env.rs  log.rs  mod.rs  mqtt.rs  publish.rs  script.rs  server.rs  settings.rs  subscription.rs  template.rs
src-tauri/src/db/: mod.rs  models.rs
src-tauri/src/log/: mod.rs
src-tauri/src/mqtt/: client.rs  mod.rs
src/assets/styles/: index.scss  variables.scss
src/components/env/: EnvDialog.vue  EnvDrawer.vue
src/components/layout/: AppLayout.vue  CommandBar.vue  Header.vue  Sidebar.vue
src/components/mqtt/: MainContent.vue  MessageList.vue  MessagePayload.vue  PublishPanel.vue  ScheduledPublishDialog.vue  (+3 more)
src/i18n/: index.ts
src/stores/: app.ts  env.ts  message.ts  mqtt.ts  script.ts  server.ts  subscription.ts  template.ts
src/types/: mqtt.ts
src/utils/: debounce.ts  envReplacer.ts  errorHandler.ts  mqttErrorHandler.ts  scriptEngine.ts
(+10 files in other folders)
